force-app/main/default/objects/NI_Partner_Channel_Order__c/NI_Partner_Channel_Order__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Initially created for the NI_CendynOrders Apex Class.</description>
    <label>NI Partner Channel Order</label>
</CustomObject>