force-app/main/default/objects/NI_Partner_Channel_Order__c/fields/Case_Default_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Default_Queue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Default Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>