force-app/main/default/objects/NI_Partner_Channel_Order__c/fields/Cendyn_Excluded_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Cendyn_Excluded_Product_Codes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cendyn Excluded Product Codes</label>
    <type>TextArea</type>
</CustomField>