force-app/main/default/objects/NI_Partner_Channel_Order__c/fields/CurrentUSDPriceBook__c.field-meta.xml
<CustomField>
    <fullName>CurrentUSDPriceBook__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CurrentUSDPriceBook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>