force-app/main/default/objects/NI_Partner_Channel_Order__c/fields/Partner_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contacts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Contacts</label>
    <type>TextArea</type>
</CustomField>